--- a/lib/client/index.html
+++ b/lib/client/index.html
@@ -2,5 +2,8 @@
 <html>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="http-server/rt.js"></script>
+    <body>
+      <h3 id='message'></h3>
+    </body>
 </html>
 
