Modularise; separate browser playground dir

--- a/dev-static/index.html
+++ b/dev-static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
-    <script src="http-server/rt.js"></script>
+    <script src="http-server/static/rt.js"></script>
     <body>
       <h3 id='message'></h3>
     </body>
